# Open-Log-RCA

./: LICENSE  README.md  cleaned_amazon_metadata.json  config.ini  main.py  pyproject.toml
Docker Compose/: docker compose.yaml
Embeddings/: chroma.sqlite3
cli/: main.py
rca_ingest/: ingest.py
utils/: RCALogger.py  RCAconfig.py  __init__.py
vectorEmbeddings/: __init__.py  createDB.py  embedding.py  ingestDB.py  setUpDB.py
