[project]
name = "openlogrca"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi>=0.121.2",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]


[project.scripts]
openlogrca = "openlogrca.main:main"


[tool.uv.sources]
openlogrca = { git = "https://github.com/SumukhaS291299/Open-Log-RCA.git", branch = "main" }
